infra/k8s/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: client
          image: ppreis/multi-k8s-react-api
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
   name: api-cluster-ip-service
spec:
    type: ClusterIP
    selector:
      component: api
    ports:
      - port: 5000
        targetPort: 5000
