infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: ppreis/multi-k8s-react-client
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
   name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
      component: web
    ports:
      - port: 3000
        targetPort: 3000
