infra/k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
   name: redis-cluster-ip-service
spec:
    type: ClusterIP
    selector:
      component: redis
    ports:
      - port: 6379
        targetPort: 6379
